
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct merge_index_entry {int member_0; char* member_1; int member_2; char* member_3; } ;
typedef int git_reference ;
typedef int git_oid ;
typedef int git_object ;
typedef int git_index ;
typedef int git_commit ;


 int GIT_OBJECT_COMMIT ;
 int cl_assert (int ) ;
 int cl_git_pass (int ) ;
 int git_commit_free (int *) ;
 int git_commit_lookup (int **,int ,int *) ;
 int git_index_free (int *) ;
 int git_index_has_conflicts (int *) ;
 int git_oid_fromstr (int *,char*) ;
 int git_reference_free (int *) ;
 int git_reference_peel (int **,int *,int ) ;
 int git_repository_head (int **,int ) ;
 int git_revert_commit (int **,int ,int *,int *,int ,int *) ;
 int merge_test_index (int *,struct merge_index_entry*,int) ;
 int repo ;

void test_revert_bare__conflicts(void)
{
 git_reference *head_ref;
 git_commit *head_commit, *revert_commit;
 git_oid revert_oid;
 git_index *index;

 struct merge_index_entry merge_index_entries[] = {
  { 0100644, "7731926a337c4eaba1e2187d90ebfa0a93659382", 1, "file1.txt" },
  { 0100644, "4b8fcff56437e60f58e9a6bc630dd242ebf6ea2c", 2, "file1.txt" },
  { 0100644, "3a3ef367eaf3fe79effbfb0a56b269c04c2b59fe", 3, "file1.txt" },
  { 0100644, "0ab09ea6d4c3634bdf6c221626d8b6f7dd890767", 0, "file2.txt" },
  { 0100644, "f4e107c230d08a60fb419d19869f1f282b272d9c", 0, "file3.txt" },
  { 0100644, "0f5bfcf58c558d865da6be0281d7795993646cee", 0, "file6.txt" },
 };

 git_oid_fromstr(&revert_oid, "72333f47d4e83616630ff3b0ffe4c0faebcc3c45");

 cl_git_pass(git_repository_head(&head_ref, repo));
 cl_git_pass(git_reference_peel((git_object **)&head_commit, head_ref, GIT_OBJECT_COMMIT));

 cl_git_pass(git_commit_lookup(&revert_commit, repo, &revert_oid));
 cl_git_pass(git_revert_commit(&index, repo, revert_commit, head_commit, 0, ((void*)0)));

 cl_assert(git_index_has_conflicts(index));
 cl_assert(merge_test_index(index, merge_index_entries, 6));

 git_commit_free(revert_commit);
 git_commit_free(head_commit);
 git_reference_free(head_ref);
 git_index_free(index);
}
